Add philosophy section and update platform description in index.html; refine team roles in team.html; Restructure homepage.

--- a/about.html
+++ b/about.html
@@ -24,6 +24,19 @@
       </div>
     </section>
 
+    <!-- PHILOSOPHY (plain, with accent rule) -->
+    <section class="section section--tint">
+      <div class="container">
+        <div class="rule" style="margin-left:0;"></div>
+        <h2>Our Philosophy</h2>
+        <div class="grid grid-3">
+          <div class="card"><h4>People come first</h4><p>Our tech empowers them, not replaces them.</p></div>
+          <div class="card"><h4>Clarity</h4><p>Transparency builds trust, we explain the “why,” not just the “what".</p></div>
+          <div class="card"><h4>Choice</h4><p>Every decision matters, especially the human ones.</p></div>
+        </div>
+      </div>
+    </section>
+
     <!-- Timeline -->
     <section class="section section--plain">
       <div class="container">
