--- a/index.html
+++ b/index.html
@@ -17,15 +17,21 @@
     <div class="rule"></div>
     <h1 class="h-gradient">Smarter Decisions. Human First.</h1>
     <p>At Xperfecta, we build intelligent systems that amplify human decision-making — not replace it.</p>
-    <p>From mental health to logistics and beyond, our AI-powered platforms are designed to support people facing complex choices. We blend technology, data, and domain expertise to guide better outcomes — with clarity, integrity, and trust at the core.</p>
   </div>
 </section>
 
-<!-- ETHOS STRIP (tinted to break the white) -->
 <section class="section section--tint">
-  <div class="container">
-    <h2 class="h-gradient" style="margin:0; text-align:center;">Decision support, not decision replacement.<br>Technology that listens before it speaks.</h2>
-  </div>
+<!-- PLATFORM (tinted band to break again) -->
+    <div class="container">
+      <h2>Our Platform</h2>
+      <p>All Xperfecta products are built on a modular, cross-domain platform</p>
+      <div class="grid grid-3">
+        <div class="card"><h4>A proprietary AI + rules engine</h4></div>
+        <div class="card"><h4>Smart interfaces for human-in-the-loop decisions</h4></div>
+        <div class="card"><h4>Configurable workflows for real-world complexity</h4></div>
+      </div>
+      <h4>We don’t automate people out of the process — we bring them into better focus.</h4>
+    </div>
 </section>
 
 <!-- DIVISIONS (first place with interactive elements) -->
@@ -45,7 +51,7 @@
           />
         <p>Galea helps individuals, clinicians, and organisations make informed mental health decisions. Built on two decades of clinical research and refined with AI, Galea delivers dynamic self-assessments, clinician tools, and population-level dashboards — improving care across the entire mental health pathway.</p>
         <!-- First CTAs appear here -->
-        <a class="btn-galea" href="https://galea.care">Learn more</a>
+        <a class="btn" href="https://galea.care">Learn more</a>
       </article>
 
       <article class="card">
@@ -65,40 +71,13 @@
   </div>
 </section>
 
-<!-- PLATFORM (tinted band to break again) -->
-<section class="section section--tint">
-  <div class="container">
-    <h2>Our Platform</h2>
-    <p>All Xperfecta products are built on a modular, cross-domain platform</p>
-    <div class="grid grid-3">
-      <div class="card"><h4>A proprietary AI + rules engine</h4></div>
-      <div class="card"><h4>Smart interfaces for human-in-the-loop decisions</h4></div>
-      <div class="card"><h4>Configurable workflows for real-world complexity</h4></div>
-    </div>
-    <h4>We don’t automate people out of the process — we bring them into better focus.</h4>
-  </div>
-</section>
-
-<!-- PHILOSOPHY (plain, with accent rule) -->
-<section class="section section--plain">
-  <div class="container">
-    <div class="rule" style="margin-left:0;"></div>
-    <h2>Our Philosophy</h2>
-    <div class="grid grid-3">
-      <div class="card"><h4>People come first</h4><p>Our tech empowers them, not replaces them.</p></div>
-      <div class="card"><h4>Clarity</h4><p>Transparency builds trust, we explain the “why,” not just the “what".</p></div>
-      <div class="card"><h4>Choice</h4><p>Every decision matters, especially the human ones.</p></div>
-    </div>
-  </div>
-</section>
-
 <!-- WHO WE ARE (soft band) -->
 <section class="section section--tint">
   <div class="container" style="max-width:900px;">
-    <h2>Who we are</h2>
-    <p>Xperfecta is led by a multidisciplinary team across healthcare, AI, design, and systems thinking. We operate with lean agility, ethical rigor, and a vision for long-term impact.</p>
-    <a class="btn" href="/team.html">Meet the team</a>
+    <h2>Explore further</h2>
+    <a class="btn" href="/team.html">Our team</a>
     <a class="btn" href="/about.html">Our story</a>
+    <a class="btn" href="/resources.html">Resources</a>
   </div>
 </section>
 
