--- a/team.html
+++ b/team.html
@@ -66,13 +66,13 @@
 
         <article class="person-card">
           <h3 class="person-name">Aman Soni</h3>
-          <div class="person-title">Role / Title</div>
+          <div class="person-title">Head of Product Development</div>
           <p class="person-bio">One–two sentences about focus or responsibilities.</p>
         </article>
 
         <article class="person-card">
           <h3 class="person-name">Dave Robertson</h3>
-          <div class="person-title">Role / Title</div>
+          <div class="person-title">Head of Product Delivery</div>
           <p class="person-bio">One–two sentences about focus or responsibilities.</p>
         </article>
 
