Center align headings and text in platform and divisions sections for improved readability

--- a/index.html
+++ b/index.html
@@ -23,21 +23,21 @@
 <section class="section section--tint">
 <!-- PLATFORM (tinted band to break again) -->
     <div class="container">
-      <h2>Our Platform</h2>
-      <p>All Xperfecta products are built on a modular, cross-domain platform</p>
+      <h2 style="text-align:center;">Our Platform</h2>
+      <p style="text-align:center;">All Xperfecta products are built on a modular, cross-domain platform</p>
       <div class="grid grid-3">
         <div class="card"><h4>A proprietary AI + rules engine</h4></div>
         <div class="card"><h4>Smart interfaces for human-in-the-loop decisions</h4></div>
         <div class="card"><h4>Configurable workflows for real-world complexity</h4></div>
       </div>
-      <h4>We don’t automate people out of the process — we bring them into better focus.</h4>
+      <h4 style="text-align:center;">We don’t automate people out of the process — we bring them into better focus.</h4>
     </div>
 </section>
 
 <!-- DIVISIONS (first place with interactive elements) -->
 <section class="section section--plain">
   <div class="container">
-    <h2>Our Divisions</h2>
+    <h2 style="text-align:center;">Our Divisions</h2>
     <div class="grid grid-3">
       <article class="card">
         <span class="chip">In market</span>
@@ -73,8 +73,8 @@
 
 <!-- WHO WE ARE (soft band) -->
 <section class="section section--tint">
-  <div class="container" style="max-width:900px;">
-    <h2>Explore further</h2>
+  <div class="container" style="max-width:900px; text-align:center;">
+    <h2 style="text-align:center;">Explore further</h2>
     <a class="btn" href="/team.html">Our team</a>
     <a class="btn" href="/about.html">Our story</a>
     <a class="btn" href="/resources.html">Resources</a>
