- Changed introductory paragraph to a heading for emphasis. - Updated description of Xperfecta products to "companies" for accuracy. - Revised phrasing in the statement about automation and focus. - Corrected logo source for Galea and improved the description for better readability. - Simplified the description of the matching engine by removing redundant phrases.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="container">
     <div class="rule"></div>
     <h1 class="h-gradient">Smarter Decisions. Human First.</h1>
-    <p>At Xperfecta, we build intelligent systems that amplify human decision-making — not replace it.</p>
+    <h3>Intelligent systems that amplify human decision-making, not replace it.</h3>
   </div>
 </section>
 
@@ -24,13 +24,13 @@
 <!-- PLATFORM (tinted band to break again) -->
     <div class="container">
       <h2 style="text-align:center;">Our Platform</h2>
-      <p style="text-align:center;">All Xperfecta products are built on a modular, cross-domain platform</p>
+      <p style="text-align:center;">All Xperfecta companies are built on a modular, cross-domain platform</p>
       <div class="grid grid-3">
         <div class="card"><h4>A proprietary AI + rules engine</h4></div>
         <div class="card"><h4>Smart interfaces for human-in-the-loop decisions</h4></div>
         <div class="card"><h4>Configurable workflows for real-world complexity</h4></div>
       </div>
-      <h4 style="text-align:center;">We don’t automate people out of the process — we bring them into better focus.</h4>
+      <h4 style="text-align:center;">We don’t automate people out of the process, we bring them into better focus.</h4>
     </div>
 </section>
 
@@ -42,14 +42,14 @@
       <article class="card">
         <span class="chip">In market</span>
           <img
-            src="/assets/img/galea-B-logo-name-slogan.svg"
+            src="/assets/img/galea-A-logo-name-slogan.svg"
             alt="Galea logo"
             height="100"
             loading="lazy"
             decoding="async"
             align-self="flex-start"
           />
-        <p>Galea helps individuals, clinicians, and organisations make informed mental health decisions. Built on two decades of clinical research and refined with AI, Galea delivers dynamic self-assessments, clinician tools, and population-level dashboards — improving care across the entire mental health pathway.</p>
+        <p>Galea helps individuals, clinicians, and organisations make informed mental health decisions. Built on two decades of clinical research and refined with AI, Galea delivers dynamic self-assessments, clinician tools, and population-level dashboards. Improving care across the entire mental health pathway.</p>
         <!-- First CTAs appear here -->
         <a class="btn" href="https://galea.care">Learn more</a>
       </article>
@@ -64,7 +64,7 @@
       <article class="card">
         <span class="chip">In development</span>
         <h3>Matching</h3>
-        <p>Our matching engine will help people find better fits — from properties to partnerships. This division explores ethical, data-driven matching at scale, with initial focus on real estate and consumer applications.</p>
+        <p>Our matching engine will help people find better fits — from properties to partnerships. This division explores ethical, data-driven matching at scale.</p>
         <a class="btn" href="/contact.html">Contact us</a>
       </article>
     </div>
