--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
     <section class="section section--tint">
       <div class="container">
         <div class="rule" style="margin-left:0;"></div>
-        <h2>Our Philosophy</h2>
+        <h2>Our Values</h2>
         <div class="grid grid-3">
           <div class="card"><h4>People come first</h4><p>Our tech empowers them, not replaces them.</p></div>
           <div class="card"><h4>Clarity</h4><p>Transparency builds trust, we explain the “why,” not just the “what".</p></div>
