Update hero section heading for clarity and impact

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <section class="section hero section--plain">
   <div class="container">
     <div class="rule"></div>
-    <h1 class="h-gradient">Smarter Decisions. Human First.</h1>
+    <h1 class="h-gradient">AI your way: Accessible Intelligence</h1>
     <h3>Intelligent systems that amplify human decision-making, not replace it.</h3>
   </div>
 </section>
