Update hero section description for clarity and impact

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="container">
     <div class="rule"></div>
     <h1 class="h-gradient">AI your way: Accessible Intelligence</h1>
-    <p>Xperfecta puts you at the centre of your decisions and ensures artificial intelligence focuses on what really matters to you. It is located in North Devon but its cloud services are boundary free. Xperfecta connects decision makers to expertise from anywhere at any time.</p>
+    <h3>Keeping you in control of your decisions</h3>
   </div>
 </section>
 
