Update platform section

--- a/index.html
+++ b/index.html
@@ -24,13 +24,12 @@
 <!-- PLATFORM (tinted band to break again) -->
     <div class="container">
       <h2 style="text-align:center;">Our Platform</h2>
-      <p style="text-align:center;">All Xperfecta companies are built on a modular, cross-domain platform</p>
+      <p style="text-align:center;">Xperfecta connects decision makers to expertise from anywhere at any time.</p>
       <div class="grid grid-3">
-        <div class="card"><h4>A proprietary AI + rules engine</h4></div>
-        <div class="card"><h4>Smart interfaces for human-in-the-loop decisions</h4></div>
-        <div class="card"><h4>Configurable workflows for real-world complexity</h4></div>
+        <div class="card"><h4>Accessible Intelligence</h4><p>Everyone should be able to access Artificial Intelligence (AI), understand it, and exploit it. But AI is a mathematical science with machine learning at its heart. The challenge is opening up the maths so that AI outputs can be understood and trusted by people with any level of numeracy. That is what drives Xperfecta. Its approach is to build mathematical models that are psychologically intuitive, where the calculations result in explanations that can be seen as valid or not, irrespective of the number crunching beneath.</p></div>
+        <div class="card"><h4>Putting you at the centre of your decisions</h4><p>Xperfecta is a disruptive approach to decision making that empowers people to work together, because they understand the reasons. AI working for people not driving them. Based in North Devon but its cloud services are boundary free, connecting you to expertise from anywhere at any time.</p></div>
+        <div class="card"><h4>What it does</h4><p>Real time evaluation of decision making driven by a psychological model of human knowledge and reasoning processes that:</p><p>- specifies the most appropriate information to collect as the decision-making process progresses</p><p>- identifies relevant hypotheses to explore</p><p>- evaluates evolving support for each hypothesis by exploiting human expertise</p><p>- suggests intelligent formulations that link hypotheses to plans</p><p>- integrates decisions with current and historical data</p><p>- provides a full and intuitive explanation of how the machine-learning outputs have generated the decision advice</p></div>
       </div>
-      <h4 style="text-align:center;">We don’t automate people out of the process, we bring them into better focus.</h4>
     </div>
 </section>
 
