Update home page to balence text visually and changed team section to remove temp descriptions.

--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
               <div class="tl-card">
                 <h3>Galea joins the family</h3>
                 <p>In 2025, the flagship system formerly known as GRiST was re-imagined as Galea, becoming the first member in the Xperfecta family.</p>
-                <p>Galea continues to evolve as the mental-health division of Xperfecta — a trusted tool for professionals, individuals and organisations alike, embodying our shared mission to make insight accessible, accountable, and human.</p>
+                <p>Galea continues to evolve as the mental-health division of Xperfecta, a trusted tool for professionals, individuals and organisations alike, embodying our shared mission to make insight accessible, accountable, and human.</p>
               </div>
             </div>
           </article>
@@ -81,7 +81,7 @@
               <div class="tl-card">
                 <h3>Building the Platform</h3>
                 <p>By 2022, the GRiST project became an independent company called Egrist, enabling the team to focus fully on embedding human intelligence into software.</p>
-                <p>This period saw the formalisation of the decision-support platform that now underpins all Xperfecta products — combining research rigour with practical design for real-world use.</p>
+                <p>This period saw the formalisation of the decision-support platform that now underpins all Xperfecta products, combining research rigour with practical design for real-world use.</p>
               </div>
             </div>
           </article>
@@ -112,7 +112,7 @@
                 <h3>Academic Origins</h3>
                 <p>Xperfecta’s roots lie in the pioneering research of Dr Christopher (Fif) Buckingham, whose PhD work explored how humans make complex decisions.</p>
                 <p>His Galatean model proposed that people judge new situations by comparing them to a perfect internal example, rather than a typical average.</p>
-                <p>This breakthrough reshaped how experts think about reasoning, risk, and concern — and became the theoretical core for what would evolve into Xperfecta’s decision-support technologies.</p>
+                <p>This breakthrough reshaped how experts think about reasoning, risk, and concern. This became the theoretical core for what would evolve into Xperfecta’s decision-support technologies.</p>
               </div>
             </div>
           </article>
