--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 <section class="section section--tint">
 <!-- PLATFORM (tinted band to break again) -->
     <div class="container">
-      <h2 style="text-align:center;">Our Platform</h2>
+      <h2 style="text-align:center;">What is Xperfecta?</h2>
       <p style="text-align:center;">Xperfecta connects decision makers to expertise from anywhere at any time.</p>
       <div class="grid grid-3">
-        <div class="card"><h4>Accessible Intelligence</h4><p>Everyone should be able to access Artificial Intelligence (AI), understand it, and exploit it. But AI is a mathematical science with machine learning at its heart. The challenge is opening up the maths so that AI outputs can be understood and trusted by people with any level of numeracy. That is what drives Xperfecta. Its approach is to build mathematical models that are psychologically intuitive, where the calculations result in explanations that can be seen as valid or not, irrespective of the number crunching beneath.</p></div>
-        <div class="card"><h4>Putting you at the centre of your decisions</h4><p>Xperfecta is a disruptive approach to decision making that empowers people to work together, because they understand the reasons. AI working for people not driving them. Based in North Devon but its cloud services are boundary free, connecting you to expertise from anywhere at any time.</p></div>
-        <div class="card"><h4>What it does</h4><p>Real time evaluation of decision making driven by a psychological model of human knowledge and reasoning processes that:</p><p>- specifies the most appropriate information to collect as the decision-making process progresses</p><p>- identifies relevant hypotheses to explore</p><p>- evaluates evolving support for each hypothesis by exploiting human expertise</p><p>- suggests intelligent formulations that link hypotheses to plans</p><p>- integrates decisions with current and historical data</p><p>- provides a full and intuitive explanation of how the machine-learning outputs have generated the decision advice</p></div>
+        <div class="card"><h4>Accessible Intelligence</h4><p>Everyone should be able to access Artificial Intelligence (AI), understand it, and make use of it. Yet AI is a mathematical science with machine learning at its heart, and the challenge is opening up that maths so AI outputs can be understood and trusted by people with any level of numeracy. That is what drives Xperfecta: building mathematical models that are psychologically intuitive, where the calculations lead to explanations that can be judged as valid or not, irrespective of the number-crunching beneath.</p></div>
+        <div class="card"><h4>Putting you at the centre of your decisions</h4><p>Xperfecta is a disruptive approach to decision making that empowers people to work together because they understand the reasons behind each outcome. It enables AI to work for people, not direct them. Based in North Devon but delivered through cloud services, it connects you to expertise from anywhere, at any time.</p></div>
+        <div class="card"><h4>What we do</h4><p>Xperfecta provides real-time evaluation of decision making, driven by a psychological model of human knowledge and reasoning. It specifies the most appropriate information to collect, identifies relevant hypotheses, evaluates evolving support using human expertise, and suggests intelligent formulations that link hypotheses to plans. It integrates decisions with current and historical data and provides intuitive explanations of how machine-learning outputs generate decision advice.</p></div>
       </div>
     </div>
 </section>
@@ -63,7 +63,7 @@
       <article class="card">
         <span class="chip">In development</span>
         <h3>Matching</h3>
-        <p>Our matching engine will help people find better fits — from properties to partnerships. This division explores ethical, data-driven matching at scale.</p>
+        <p>Our matching engine will help people find better fits, from properties to partnerships. This division explores ethical, data-driven matching at scale.</p>
         <a class="btn" href="/contact.html">Contact us</a>
       </article>
     </div>
