--- a/galea-newsletter-december.html
+++ b/galea-newsletter-december.html
@@ -46,7 +46,7 @@
     /* ===== Header ===== */
 /* === Header image with rounded top corners === */
     .header {
-      background: url("/assets/newsletter/december/newsletter-image-trimmed-header-v2.webp") center/cover no-repeat;
+      background: url("https://billson.li/assets/newsletter/december/newsletter-image-trimmed-header-v2.webp") center/cover no-repeat;
       padding: 20px 24px 10px;     /* spacing for logo + subtitle */
       color: #ffffff;
       border-radius: 10px 10px 0 0; /* same radius as newsletter card */
@@ -236,7 +236,7 @@
       <header class="header">
         <div class="header-inner">
           <a href="https://galea.care" target="_blank" class="header-logo-link">
-            <img src="assets/newsletter/december/newsletter-galea-c-logo-name.svg"Galea" class="header-logo-img">
+            <img src="https://billson.li/assets/newsletter/december/newsletter-galea-c-logo-name.svg"Galea" class="header-logo-img">
           </a>
           <p class="header-subtitle">Monthly update · December 2025</p>
         </div>
@@ -251,7 +251,7 @@
         <p class="section-body">Throughout December, we’ve continued working hard on platform improvements, particularly machine learning and the foundations that make Galea smoother and more intuitive to use. Below, you’ll find a look at what’s been happening behind the scenes, along with a few reflections from our team.</p>
         <!-- OPTIONAL IMAGE BELOW TEXT -->
         <div class="section-image">
-          <img src="assets/newsletter/december/newsletter-image-trimmed-laptop.webp" alt="Laptop on desk">
+          <img src="https://billson.li/assets/newsletter/december/newsletter-image-trimmed-laptop.webp" alt="Laptop on desk">
         </div>
       </section>
 
@@ -263,7 +263,7 @@
         <p class="section-body">All of this work has been leading towards an even bigger year in 2026. We’re excited to share more soon and even more excited to get these improvements into your hands.</p>
         <!-- OPTIONAL IMAGE BELOW TEXT -->
         <div class="section-image">
-          <img src="assets/newsletter/december/newsletter-image-trimmed-castle.webp" alt="Castle">
+          <img src="https://billson.li/assets/newsletter/december/newsletter-image-trimmed-castle.webp" alt="Castle">
         </div>
       </section>
 
@@ -287,7 +287,7 @@
 
         <!-- OPTIONAL IMAGE (STACKED) -->
         <div class="section-image">
-          <img src="assets/newsletter/december/newsletter-image-trimmed-city.webp" alt="City">
+          <img src="https://billson.li/assets/newsletter/december/newsletter-image-trimmed-city.webp" alt="City">
         </div>
       </section>
 
@@ -318,33 +318,33 @@
         <div class="footer-top">
           <!-- Replace with your square/mark-only logo SVG -->
           <a href="https://galea.care" target="_blank" class="footer-logo-link">
-            <img src="assets/newsletter/december/newsletter-galea-b-logo.svg" alt="Galea home" class="footer-logo-img">
+            <img src="https://billson.li/assets/newsletter/december/newsletter-galea-b-logo.svg" alt="Galea home" class="footer-logo-img">
           </a>
 
           <ul class="social-links">
             <li>
               <a href="https://www.linkedin.com/company/galea-care" target="_blank">
-                <img src="assets/newsletter/december/newsletter-linkedin.svg" alt="LinkedIn" width="20" height="20">
+                <img src="https://billson.li/assets/newsletter/december/newsletter-linkedin.svg" alt="LinkedIn" width="20" height="20">
               </a>
             </li>
             <li>
               <a href="https://www.instagram.com/galea.care/">
-                <img src="assets/newsletter/december/newsletter-Instagram.svg" alt="Instagram" width="20" height="20">
+                <img src="https://billson.li/assets/newsletter/december/newsletter-Instagram.svg" alt="Instagram" width="20" height="20">
               </a>
             </li>
             <li>
               <a href="https://www.threads.com/@galea.care">
-                <img src="assets/newsletter/december/newsletter-threads.svg" alt="Threads" width="20" height="20">
+                <img src="https://billson.li/assets/newsletter/december/newsletter-threads.svg" alt="Threads" width="20" height="20">
               </a>
             </li>
             <li>
               <a href="https://bsky.app/profile/galea.care">
-                <img src="assets/newsletter/december/newsletter-bluesky.svg" alt="Bluesky" width="20" height="20">
+                <img src="https://billson.li/assets/newsletter/december/newsletter-bluesky.svg" alt="Bluesky" width="20" height="20">
               </a>
             </li>
             <li>
               <a href="https://mastodon.social/@galea_care">
-                <img src="assets/newsletter/december/newsletter-mastodon.svg" alt="Mastodon" width="20" height="20">
+                <img src="https://billson.li/assets/newsletter/december/newsletter-mastodon.svg" alt="Mastodon" width="20" height="20">
               </a>
             </li>
           </ul>
