Update December newsletter content for clarity and focus on benchmarking

--- a/galea-newsletter-december.html
+++ b/galea-newsletter-december.html
@@ -248,7 +248,7 @@
         <h1 class="section-title">Merry Christmas and a Happy New Year</h1>
 
         <p class="section-body">Welcome to our final newsletter of 2025. We’d like to start by wishing you a very merry Christmas and a happy New Year from everyone here at Galea.</p>
-        <p class="section-body">Throughout December, we’ve continued working hard on platform improvements, particularly machine learning and the foundations that make Galea smoother and more intuitive to use. Below, you’ll find a look at what’s been happening behind the scenes, along with a few reflections from our team.</p>
+        <p class="section-body">Throughout the last month, we’ve continued working hard on platform improvements, particularly on benchmarking and the foundations that make Galea smoother and more intuitive to use. Below, you’ll find a look at what’s been happening behind the scenes, along with a few reflections from our team.</p>
         <!-- OPTIONAL IMAGE BELOW TEXT -->
         <div class="section-image">
           <img src="https://billson.li/assets/newsletter/december/christmas.webp" alt="Laptop on desk">
@@ -259,7 +259,7 @@
       <section class="section">
         <p class="section-label">02 · What we’re focusing on</p>
         <h2 class="section-title">Looking ahead to 2026</h2>
-        <p class="section-body">This year has been a big one: we launched our rebrand to Galea, delivered the first stage of our improved UI, and built the background infrastructure that will power the next generation of features.</p>
+        <p class="section-body">This year has been a big one: we launched our rebrand to Galea, delivered the first stage of our improved UI, and built the background infrastructure that will power the next generation of development.</p>
         <p class="section-body">All of this work has been leading towards an even bigger year in 2026. We’re excited to share more soon and even more excited to get these improvements into your hands.</p>
         <!-- OPTIONAL IMAGE BELOW TEXT -->
         <div class="section-image">
